fixed logo image path

--- a/IDP.html
+++ b/IDP.html
@@ -448,7 +448,7 @@
     <div class="splash-screen" id="splash-screen">
         <div class="splash-header">
             <!-- RV Logo Image -->
-            <img class="rv-logo" src="C:/Users/vikhy/Downloads/rvlogo.jpg" alt="RV College Logo">
+            <img class="rv-logo" src="./rvlogo.jpg" alt="RV College Logo">
         </div>
 
         <div class="splash-content">
@@ -524,7 +524,7 @@
         <div class="auth-card">
             <div class="auth-sidebar" id="auth-sidebar">
                 <div class="auth-sidebar-header">
-                    <img width="40" height="40" src="C:/Users/vikhy/Downloads/rvlogo.jpg" alt="RV College Logo">
+                    <img width="40" height="40" src="./rvlogo.jpg" alt="RV College Logo">
                     <h2>ChemTrack</h2>
                     <p>Blockchain Chemical Traceability</p>
                 </div>
